# django-falcon

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: admin.py  models.py  urls.py  views.py
app/static/apps/login/: login.css
root/: settings.py  urls.py
templates/apps/: base.html
templates/apps/auth/: login.html
templates/apps/product/: product_detail.html  product_list.html
